force-app/main/default/objects/Vehicle__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>Loan end date</label>
    <type>Date</type>
</CustomField>