force-app/main/default/objects/Vehicle__c/fields/Engine_capacity__c.field-meta.xml
<CustomField>
    <fullName>Engine_capacity__c</fullName>
    <label>Engine capacity</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>