force-app/main/default/objects/Vehicle__c/fields/EngineCapacity__c.field-meta.xml
<CustomField>
    <fullName>EngineCapacity__c</fullName>
    <label>Engine Capacity</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>