force-app/main/default/objects/Vehicle__c/fields/InsuranceEndDate__c.field-meta.xml
<CustomField>
    <fullName>InsuranceEndDate__c</fullName>
    <label>Insurance End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>