force-app/main/default/objects/Vehicle__c/fields/LoanEndDate__c.field-meta.xml
<CustomField>
    <fullName>LoanEndDate__c</fullName>
    <label>Loan End Date</label>
    <type>Date</type>
</CustomField>