force-app/main/default/objects/Vehicle__c/fields/LoanTo__c.field-meta.xml
<CustomField>
    <fullName>LoanTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicles (Total loss)</relationshipLabel>
    <relationshipName>Vehicles1</relationshipName>
    <type>Lookup</type>
</CustomField>