force-app/main/default/objects/Vehicle__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <label>Make</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audi</fullName>
            </value>
            <value>
                <fullName>Austin</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>Cadillac</fullName>
            </value>
            <value>
                <fullName>Chevrolet</fullName>
            </value>
            <value>
                <fullName>Chrysler</fullName>
            </value>
            <value>
                <fullName>Citroen</fullName>
            </value>
            <value>
                <fullName>Abarth</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>Acura</fullName>
            </value>
            <value>
                <fullName>Aixam</fullName>
            </value>
            <value>
                <fullName>Alpina</fullName>
            </value>
            <value>
                <fullName>Alpine</fullName>
            </value>
            <value>
                <fullName>AMC</fullName>
            </value>
            <value>
                <fullName>AMG</fullName>
            </value>
            <value>
                <fullName>APAL</fullName>
            </value>
            <value>
                <fullName>Ariel</fullName>
            </value>
            <value>
                <fullName>ARO</fullName>
            </value>
            <value>
                <fullName>Aston Martin</fullName>
            </value>
            <value>
                <fullName>Autobianchi</fullName>
            </value>
            <value>
                <fullName>Auverland</fullName>
            </value>
            <value>
                <fullName>Bauchet</fullName>
            </value>
            <value>
                <fullName>Bentley</fullName>
            </value>
            <value>
                <fullName>Bertone</fullName>
            </value>
            <value>
                <fullName>Bristol</fullName>
            </value>
            <value>
                <fullName>Bugatti</fullName>
            </value>
            <value>
                <fullName>Buick</fullName>
            </value>
            <value>
                <fullName>Caterham</fullName>
            </value>
            <value>
                <fullName>Checker</fullName>
            </value>
            <value>
                <fullName>Cobra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>