force-app/main/default/objects/Vehicle__c/fields/Mi__c.field-meta.xml
<CustomField>
    <fullName>Mi__c</fullName>
    <label>Mileage</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>