force-app/main/default/objects/Vehicle__c/fields/TechRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>TechRecordTypeName__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_RecordTypeName</label>
    <type>Text</type>
</CustomField>