force-app/main/default/objects/Vehicle__c/fields/Text_recordType__c.field-meta.xml
<CustomField>
    <fullName>Text_recordType__c</fullName>
    <description>record type name</description>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text_recordType</label>
    <type>Text</type>
</CustomField>