force-app/main/default/objects/Vehicle__c/fields/VehicleNumber__c.field-meta.xml
<CustomField>
    <fullName>VehicleNumber__c</fullName>
    <label>Vehicle Number</label>
    <type>AutoNumber</type>
</CustomField>