force-app/main/default/objects/Vehicle__c/fields/YearOfVehicle__c.field-meta.xml
<CustomField>
    <fullName>YearOfVehicle__c</fullName>
    <label>Year of Vehicle</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>