force-app/main/default/objects/Vehicle__c/fields/YearVehicle__c.field-meta.xml
<CustomField>
    <fullName>YearVehicle__c</fullName>
    <label>Year of Vehicle</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>