force-app/main/default/objects/Vehicle__c/recordTypes/Customer_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Customer_Vehicle</fullName>
    <active>true</active>
    <label>Customer Vehicle</label>
</RecordType>