force-app/main/default/objects/Vehicle__c/recordTypes/CustomerVehicle.recordType-meta.xml
<RecordType>
    <fullName>CustomerVehicle</fullName>
    <active>true</active>
    <label>Customer Vehicle</label>
</RecordType>