force-app/main/default/objects/Vehicle__c/recordTypes/Loaned_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Loaned_Vehicle</fullName>
    <active>true</active>
    <label>Loaned Vehicle</label>
</RecordType>