force-app/main/default/objects/Vehicle__c/listViews/Loaned_vehicles.listView-meta.xml
<ListView>
    <fullName>Loaned_vehicles</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>status__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Loaned vehicles</label>
</ListView>